2000-10-23  Andrew Innes  <andrewi@gnu.org>

	* files.el (make-backup-file-name-1) [windowsnt, ms-dos]: Remove
	superfluous calls to subst-char-in-string; instead apply
	expand-file-name after convert-standard-filename to ensure
	expected directory separators are used.

2000-10-23  Eli Zaretskii  <eliz@is.elta.co.il>

	* info.el (Info-file-list-for-emacs): Add an entry for Eshell.

2000-10-23  Dave Love  <fx@gnu.org>

	* imenu.el (imenu--create-keymap-2): Build menu with menu-item
	using :key-sequence, making it much more usable.  Use nconc, not
	append.
	(imenu--create-keymap-1): Avoid append.

	* textmodes/refill.el: Remove bits redundant with define-minor-mode.
 
2000-10-23  Miles Bader  <miles@lsi.nec.co.jp>

	[the following changes fix a bug where `define-minor-mode' didn't
	correctly generate :require clauses for defcustoms in compiled files]
	* emacs-lisp/bytecomp.el (byte-compile-last-logged-file): New variable.
	(byte-compile-log-file, byte-compile-log-1): Don't set
	`byte-compile-current-file' to nil.  Instead set
	`byte-compile-last-logged-file' to it.  Test whether
	byte-compile-current-file equals byte-compile-last-logged-file
	instead of whether its nil.
	(byte-compile-file): Bind `byte-compile-last-logged-file' to nil.

2000-10-23  Stefan Monnier  <monnier@cs.yale.edu>

	* textmodes/refill.el: Fix var names in doc.
	(refill-mode): Don't bother with make-local-hook anymore.

2000-10-23  Miles Bader  <miles@lsi.nec.co.jp>

	* faces.el (face-user-default-spec, face-default-spec): New functions.
	(face-spec-choose, face-spec-set): Document nil-SPEC behavior.
	(frame-set-background-mode, face-set-after-frame-default): 
	Use `face-user-default-spec'.  Simplify code slightly.

	* woman.el (woman-italic-face, woman-bold-face) 
	(woman-unknown-face): Add dark-background variants.
	(woman-default-faces): Renamed from `woman-colour-faces'.
	Set using the stored defaults, rather than using hard-wired colors.