@@ -1,3 +1,8 @@
+2000-10-24  Andrew Choi  <akochoi@i-cable.com>
+
+	* src/macterm.c (XTread_socket): check whether Lisp variable
+	mac-ready-for-drag-n-drop is bound rather than non-nil value.
+
 2000-10-20  Andrew Choi  <akochoi@users.sourceforge.net>
 
 	* INSTALL: New file.
